# llamaindex-multimail

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: email_agent.py
llamaindex_multimail/: __init__.py  tools.py
